<resources>
    <string name="app_name">Parking Helper</string>
    <string name="background_purple_gradient_circle_description">Background Purple Gradient Circle Vector</string>
    <string name="menu_icon_description">Menu Icon Vector</string>
    <string name="user_icon_description">User Icon Vector</string>
    <string name="camera_icon_description">Camera Icon Vector</string>
    <string name="backButton">Back Button Vector</string>
    <string name="show_hide">Show Hide Vector</string>
    <string name="left_arrow">Left Arrow</string>
    <string-array name="vehicleType">
        <item>Car</item>
        <item>Motorcycle</item>
        <item>Scooty</item>
        <item>Truck</item>
        <item>Bus</item>
        <item>Other</item>
    </string-array>
</resources>