<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:elevation="22dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_purple_gradient_circle"
        android:layout_width="700dp"
        android:layout_height="700dp"
        android:layout_marginBottom="420dp"
        android:contentDescription="@string/background_purple_gradient_circle_description"
        android:src="@drawable/background_circle_purple_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/main_menu_bar"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:contentDescription="@string/menu_icon_description"
        android:focusable="true"
        android:elevation="22dp"
        android:src="@drawable/menu_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <ImageView
        android:id="@+id/main_user_icon"
        android:layout_width="91dp"
        android:layout_height="79dp"
        android:clickable="true"
        android:contentDescription="@string/user_icon_description"
        android:focusable="true"
        android:elevation="22dp"
        android:src="@drawable/user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toEndOf="@+id/main_menu_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />


        <ImageView
            android:padding="30dp"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="22dp"
            android:background="@drawable/rectangle_bg_white_a700_radius_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/main_camera_icon"
            android:layout_gravity="center"
            android:contentDescription="@string/camera_icon_description"
            android:src="@drawable/qr_icon" />

        <androidx.cardview.widget.CardView
            android:id="@+id/main_caller_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="136dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="20dp"
            android:elevation="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_camera_icon">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient_caller_card"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/caller_card_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/user_icon" />
                    <TextView
                        android:id="@+id/caller_card_name"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginEnd="30dp"
                        android:layout_marginStart="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="User Name"
                        android:textSize="28sp"
                        android:textColor="#FF000000"
                        android:fontFamily="@font/inria_sans" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/caller_card_phone_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/call_icon"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:outlineAmbientShadowColor="@color/light_grey_transparent"
                        android:clickable="true"
                        android:focusable="true" />
                    <ImageView
                        android:id="@+id/caller_card_chat_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/chat_icon"
                        android:outlineAmbientShadowColor="@color/light_grey_transparent"
                        android:clickable="true"
                        android:focusable="true" />
                    <ImageView
                        android:id="@+id/caller_card_cancel_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/cancel_icon"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:outlineAmbientShadowColor="@color/light_grey_transparent"
                        android:clickable="true"
                        android:focusable="true" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainDrawerLayout"

        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/mainNavMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:itemTextAppearance="@style/NavDrawerTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="start"
            app:itemBackground="@drawable/nav_item_drawable_pressed"
            app:itemIconTint="#FF000000"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/nav_items" />
    </androidx.drawerlayout.widget.DrawerLayout>



</androidx.constraintlayout.widget.ConstraintLayout>